--- a/welcome/index.yml
+++ b/welcome/index.yml
@@ -1,6 +1,6 @@
 title: Bem-vindo
 ordering:
 - welcome-to-d
-#- install-d-locally
-#- run-d-program-locally
-#- links-documentation
+- install-d-locally
+- run-d-program-locally
+- links-documentation
